--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -3,6 +3,7 @@
 <head>
 
 </head>
+
 <body>
 
 
@@ -39,11 +40,11 @@
 Товары — зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары, поставка которых может быть осуществлена в рамках данного договора.  <br><br>
 2. ПРЕДМЕТ ДОГОВОРА <br>
 2.1. Исполнитель обязуется оказать услуги по оптовым поставкам товаров Заказчику, а Заказчик обязуется оплатить эти услуги в соответствии с условиями настоящего договора. <br>
-2.2. Поставки товаров могут включать зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары по согласованию сторон.
-2.3. Услуги предоставляются на условиях поставки "CIF" (по Международным правилам Инкотермс 2020) или других, оговоренных в договоре условиях, по предварительному соглашению сторон.
-
-3. ПРАВА И ОБЯЗАННОСТИ СТОРОН
-3.1. Обязанности Исполнителя:
+2.2. Поставки товаров могут включать зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары по согласованию сторон.<br>
+2.3. Услуги предоставляются на условиях поставки "CIF" (по Международным правилам Инкотермс 2020) или других, оговоренных в договоре условиях, по предварительному соглашению сторон.<br>
+<br><br>
+3. ПРАВА И ОБЯЗАННОСТИ СТОРОН<br>
+3.1. Обязанности Исполнителя:<br>
 
 3.1.1. Осуществлять поставки товаров в сроки и в соответствии с условиями настоящего договора.
 3.1.2. Предоставлять Заказчику всю необходимую информацию, касающуюся поставляемых товаров, включая документы, сертификаты и иные сопроводительные материалы.
