--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -25,7 +25,7 @@
 --------
 
 <div>
-ДОГОВОР ОФЕРТЫ <br>
+<center>ДОГОВОР ОФЕРТЫ</center> <br>
 на оказание услуг по оптовым поставкам товаров <br>
 
 Город Москва «<span class="day"></span>» <span class="month"></span> 2024 года  <br> <br>
