--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -26,7 +26,7 @@
 
 <div>
 <center>ДОГОВОР ОФЕРТЫ</center> <br>
-на оказание услуг по оптовым поставкам товаров <br>
+<center>На оказание услуг по оптовым поставкам</center> <br>
 
 Город Москва «<span class="day"></span>» <span class="month"></span> 2024 года  <br> <br>
 
