--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -30,7 +30,7 @@
 
 Город Москва «<span class="day"></span>» <span class="month"></span> 2024 года  <br> <br>
 
-1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ <br>
+<center>1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ</center> <br>
 1.1. В настоящем Договоре следующие термины имеют следующие значения: <br>
 
 Оферта — предложение одной стороны (Исполнителя) другой стороне (Заказчику) заключить договор на условиях, изложенных в настоящем документе. <br>
@@ -43,7 +43,7 @@
 2.2. Поставки товаров могут включать зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары по согласованию сторон.<br>
 2.3. Услуги предоставляются на условиях поставки "CIF" (по Международным правилам Инкотермс 2020) или других, оговоренных в договоре условиях, по предварительному соглашению сторон.<br>
 <br><br>
-3. ПРАВА И ОБЯЗАННОСТИ СТОРОН<br>
+<center>3. ПРАВА И ОБЯЗАННОСТИ СТОРОН</center> <br>
 3.1. Обязанности Исполнителя:<br>
 
 3.1.1. Осуществлять поставки товаров в сроки и в соответствии с условиями настоящего договора.
