--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -30,7 +30,7 @@
 
 Город Москва «<span class="day"></span>» <span class="month"></span> 2024 года  <br> <br>
 
-<center>1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ</center> <br>
+<center>1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ</center> <br><br>
 1.1. В настоящем Договоре следующие термины имеют следующие значения: <br>
 
 Оферта — предложение одной стороны (Исполнителя) другой стороне (Заказчику) заключить договор на условиях, изложенных в настоящем документе. <br>
@@ -38,31 +38,31 @@
 Исполнитель — организация, осуществляющая оптовые поставки товаров по данному договору. <br>
 Услуга — деятельность Исполнителя по поставке товаров, указанных в п. 1.2. настоящего Договора, в соответствии с условиями, изложенными в Оферте. <br>
 Товары — зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары, поставка которых может быть осуществлена в рамках данного договора.  <br><br>
-2. ПРЕДМЕТ ДОГОВОРА <br>
+2. ПРЕДМЕТ ДОГОВОРА <br><br>
 2.1. Исполнитель обязуется оказать услуги по оптовым поставкам товаров Заказчику, а Заказчик обязуется оплатить эти услуги в соответствии с условиями настоящего договора. <br>
 2.2. Поставки товаров могут включать зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары по согласованию сторон.<br>
 2.3. Услуги предоставляются на условиях поставки "CIF" (по Международным правилам Инкотермс 2020) или других, оговоренных в договоре условиях, по предварительному соглашению сторон.<br>
 <br><br>
-<center>3. ПРАВА И ОБЯЗАННОСТИ СТОРОН</center> <br>
+<center>3. ПРАВА И ОБЯЗАННОСТИ СТОРОН</center> <br><br>
 3.1. Обязанности Исполнителя:<br>
 
-3.1.1. Осуществлять поставки товаров в сроки и в соответствии с условиями настоящего договора.
-3.1.2. Предоставлять Заказчику всю необходимую информацию, касающуюся поставляемых товаров, включая документы, сертификаты и иные сопроводительные материалы.
-3.1.3. Обеспечить качество товаров, соответствующее нормам и стандартам.
-3.2. Обязанности Заказчика:
-3.2.1. Оплатить стоимость услуг по поставке товаров в сроки и на условиях, предусмотренных договором.
-3.2.2. Принять товары в месте и в сроки, указанные в условиях договора.
-3.2.3. Обеспечить необходимое сотрудничество с Исполнителем для выполнения условий договора.
-4. СТОИМОСТЬ УСЛУГ И ПОРЯДОК ОПЛАТЫ
-4.1. Стоимость услуг по оптовым поставкам товаров определяется на основании цен, согласованных сторонами в отдельном заказе или контракте.
-4.2. Оплата услуг осуществляется Заказчиком на условиях 100% предоплаты или по графику, согласованному сторонами.
-4.3. Все платежи по данному договору осуществляются в рублях Российской Федерации на счет Исполнителя, указанный в счетах или инвойсах.
+3.1.1. Осуществлять поставки товаров в сроки и в соответствии с условиями настоящего договора.<br>
+3.1.2. Предоставлять Заказчику всю необходимую информацию, касающуюся поставляемых товаров, включая документы, сертификаты и иные сопроводительные материалы.<br>
+3.1.3. Обеспечить качество товаров, соответствующее нормам и стандартам.<br>
+3.2. Обязанности Заказчика:<br>
+3.2.1. Оплатить стоимость услуг по поставке товаров в сроки и на условиях, предусмотренных договором.<br>
+3.2.2. Принять товары в месте и в сроки, указанные в условиях договора.<br>
+3.2.3. Обеспечить необходимое сотрудничество с Исполнителем для выполнения условий договора.<br>
+<center>4. СТОИМОСТЬ УСЛУГ И ПОРЯДОК ОПЛАТЫ</center> <br><br>
+4.1. Стоимость услуг по оптовым поставкам товаров определяется на основании цен, согласованных сторонами в отдельном заказе или контракте.<br>
+4.2. Оплата услуг осуществляется Заказчиком на условиях 100% предоплаты или по графику, согласованному сторонами.<br>
+4.3. Все платежи по данному договору осуществляются в рублях Российской Федерации на счет Исполнителя, указанный в счетах или инвойсах.<br><br>
 
-5. СРОКИ И УСЛОВИЯ ПОСТАВОК
-5.1. Сроки поставки товаров определяются в каждом случае индивидуально и согласовываются сторонами в заказах или контрактах.
-5.2. Исполнитель обязуется поставить товары в согласованные сроки. В случае непредвиденных обстоятельств, препятствующих выполнению поставки в срок, Исполнитель обязуется своевременно уведомить Заказчика о возможных изменениях.
+<center>5. СРОКИ И УСЛОВИЯ ПОСТАВОК</center> <br><br>
+5.1. Сроки поставки товаров определяются в каждом случае индивидуально и согласовываются сторонами в заказах или контрактах.<br>
+5.2. Исполнитель обязуется поставить товары в согласованные сроки. В случае непредвиденных обстоятельств, препятствующих выполнению поставки в срок, Исполнитель обязуется своевременно уведомить Заказчика о возможных изменениях.<br>
 
-6. ОТВЕТСТВЕННОСТЬ СТОРОН
+<center>6. ОТВЕТСТВЕННОСТЬ СТОРОН</center>  <br><br>
 6.1. В случае неисполнения или ненадлежащего исполнения обязательств по настоящему договору, виновная сторона несет ответственность в соответствии с законодательством Российской Федерации.
 6.2. Исполнитель не несет ответственности за убытки, связанные с задержками в поставке товаров по вине третьих лиц, а также за ущерб, причиненный форс-мажорными обстоятельствами.
 6.3. Заказчик несет ответственность за своевременную оплату поставленных товаров и за принятие товаров по установленному порядку.
