--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -38,7 +38,7 @@
 Исполнитель — организация, осуществляющая оптовые поставки товаров по данному договору. <br>
 Услуга — деятельность Исполнителя по поставке товаров, указанных в п. 1.2. настоящего Договора, в соответствии с условиями, изложенными в Оферте. <br>
 Товары — зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары, поставка которых может быть осуществлена в рамках данного договора.  <br><br>
-2. ПРЕДМЕТ ДОГОВОРА <br><br>
+<center>2. ПРЕДМЕТ ДОГОВОРА</center> <br><br>
 2.1. Исполнитель обязуется оказать услуги по оптовым поставкам товаров Заказчику, а Заказчик обязуется оплатить эти услуги в соответствии с условиями настоящего договора. <br>
 2.2. Поставки товаров могут включать зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары по согласованию сторон.<br>
 2.3. Услуги предоставляются на условиях поставки "CIF" (по Международным правилам Инкотермс 2020) или других, оговоренных в договоре условиях, по предварительному соглашению сторон.<br>
