--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -26,7 +26,7 @@
 
 <div>
 <center>ДОГОВОР ОФЕРТЫ</center> <br>
-<center>НА ОКАЗАНИЕ УСЛУГ ПО ОПТОВЫМ ПОСТАВКАМ ТОВАРОВ</center> <br>
+<center>НА ОКАЗАНИЕ УСЛУГ ПО ОПТОВЫМ ПОСТАВКАМ НА ЭКСПОРТ</center> <br>
 
 Город Москва «<span class="day"></span>» <span class="month"></span> 2024 года  <br> <br>
 
