--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -67,22 +67,22 @@
 6.2. Исполнитель не несет ответственности за убытки, связанные с задержками в поставке товаров по вине третьих лиц, а также за ущерб, причиненный форс-мажорными обстоятельствами.
 6.3. Заказчик несет ответственность за своевременную оплату поставленных товаров и за принятие товаров по установленному порядку.
 
-7. ФОРС-МАЖОР
-7.1. Стороны освобождаются от ответственности за неисполнение обязательств по настоящему договору в случае наступления форс-мажорных обстоятельств, таких как: стихийные бедствия, войны, забастовки, акты государственной власти и другие обстоятельства, которые не могли быть предусмотрены или предотвращены стороной.
-7.2. Сторона, для которой наступили форс-мажорные обстоятельства, обязана уведомить другую сторону в течение 5 рабочих дней о наступлении таких обстоятельств.
+<center>7. ФОРС-МАЖОР</center>   <br><br>
+7.1. Стороны освобождаются от ответственности за неисполнение обязательств по настоящему договору в случае наступления форс-мажорных обстоятельств, таких как: стихийные бедствия, войны, забастовки, акты государственной власти и другие обстоятельства, которые не могли быть предусмотрены или предотвращены стороной.<br>
+7.2. Сторона, для которой наступили форс-мажорные обстоятельства, обязана уведомить другую сторону в течение 5 рабочих дней о наступлении таких обстоятельств.<br>
 
-8. СОГЛАШЕНИЕ О ПЕРСОНАЛЬНЫХ ДАННЫХ
-8.1. Стороны подтверждают, что в процессе исполнения настоящего договора они могут обмениваться личными данными, которые используются исключительно для выполнения обязательств по настоящему договору.
+<center>8. СОГЛАШЕНИЕ О ПЕРСОНАЛЬНЫХ ДАННЫХ</center>  <br><br>
+8.1. Стороны подтверждают, что в процессе исполнения настоящего договора они могут обмениваться личными данными, которые используются исключительно для выполнения обязательств по настоящему договору.<br>
 
-9. ПРОЧИЕ УСЛОВИЯ
-9.1. Все изменения и дополнения к настоящему договору оформляются в письменной форме и являются неотъемлемой частью договора.
-9.2. В случае возникновения споров, стороны будут стремиться к их разрешению путем переговоров. В случае невозможности решения спора путем переговоров, спор передается на рассмотрение в арбитражный суд по месту нахождения Исполнителя.
+<center>9. ПРОЧИЕ УСЛОВИЯ</center>  <br><br>
+9.1. Все изменения и дополнения к настоящему договору оформляются в письменной форме и являются неотъемлемой частью договора.<br>
+9.2. В случае возникновения споров, стороны будут стремиться к их разрешению путем переговоров. В случае невозможности решения спора путем переговоров, спор передается на рассмотрение в арбитражный суд по месту нахождения Исполнителя.<br>
 
-10. ПРИЛОЖЕНИЯ
-10.1. Приложения к настоящему договору являются его неотъемлемой частью.
+<center>10. ПРИЛОЖЕНИЯ</center>  <br><br>
+10.1. Приложения к настоящему договору являются его неотъемлемой частью.<br>
 
-11. ПОДПИСАНИЕ СТОРОН
-11.1. Подписанием данного договора одна сторона делает предложение, а другая сторона принимает его в установленном порядке, что влечет за собой заключение договора.
+<center>11. ПОДПИСАНИЕ СТОРОН</center>  <br><br>
+11.1. Подписанием данного договора одна сторона делает предложение, а другая сторона принимает его в установленном порядке, что влечет за собой заключение договора.<br>
 
 </div>
 
