--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -3,7 +3,71 @@
 <head>
 
 </head>
+<script>
+var now = new Date(); //create a new Date
+var year = now.getFullYear();
+var mm = (now.getMonth());
+var dd = now.getDate();
+var hour = now.getHours();
+var min = now.getMinutes();
+var sec = now.getSeconds();
 
+//Get month as a string
+function monthToStr(data){
+  var month=new Array();
+  month[0]="January";
+  month[1]="February";
+  month[2]="March";
+  month[3]="April";
+  month[4]="May";
+  month[5]="June";
+  month[6]="July";
+  month[7]="August";
+  month[8]="September";
+  month[9]="October";
+  month[10]="November";
+  month[11]="December";
+  return month[data];
+}
+
+//Get day as a string
+function dayToStr(data){
+  var day=new Array();
+  day[0]="Sunday";
+  day[1]="Monday";
+  day[2]="Tuesday";
+  day[3]="Wednesday";
+  day[4]="Thursday";
+  day[5]="Friday";
+  day[6]="Saturday";
+  return day[data]; 
+}
+
+function setTime(){
+
+	var now = new Date(); //create a new Date
+	var year = now.getFullYear();
+	var mm = (now.getMonth());
+	var dd = now.getDate();
+	var hour = now.getHours() >= 10 ? now.getHours() : "0" + now.getHours();
+	var min = now.getMinutes() >= 10 ? now.getMinutes() : "0" + now.getMinutes();
+	var sec = now.getSeconds() >= 10 ? now.getSeconds() : "0" + now.getSeconds();
+	
+// Get Date
+	$('.day').html(dayToStr(dd));
+	$('.date').html(dd + " " + monthToStr(mm) + " " + year);
+	$('.time').html(hour + ":" + min + ":" + sec);
+};
+
+// Set Interval to refresh the clock every second
+setInterval(setTime, 1000);
+
+
+let tme = document.getElementById("day")
+let now = new Date();
+var timeStr = time.toLocaleTimeString();
+tme.innerHTML += timeStr;
+<script>
 <body>
 
 
