--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -122,7 +122,7 @@ tme.innerHTML += timeStr;
 3.2. Обязанности Заказчика:<br>
 3.2.1. Оплатить стоимость услуг по поставке товаров в сроки и на условиях, предусмотренных договором.<br>
 3.2.2. Принять товары в месте и в сроки, указанные в условиях договора.<br>
-3.2.3. Обеспечить необходимое сотрудничество с Исполнителем для выполнения условий договора.<br>
+3.2.3. Обеспечить необходимое сотрудничество с Исполнителем для выполнения условий договора.<br><br>
 <center>4. СТОИМОСТЬ УСЛУГ И ПОРЯДОК ОПЛАТЫ</center> <br><br>
 4.1. Стоимость услуг по оптовым поставкам товаров определяется на основании цен, согласованных сторонами в отдельном заказе или контракте.<br>
 4.2. Оплата услуг осуществляется Заказчиком на условиях 100% предоплаты или по графику, согласованному сторонами.<br>
@@ -130,19 +130,19 @@ tme.innerHTML += timeStr;
 
 <center>5. СРОКИ И УСЛОВИЯ ПОСТАВОК</center> <br><br>
 5.1. Сроки поставки товаров определяются в каждом случае индивидуально и согласовываются сторонами в заказах или контрактах.<br>
-5.2. Исполнитель обязуется поставить товары в согласованные сроки. В случае непредвиденных обстоятельств, препятствующих выполнению поставки в срок, Исполнитель обязуется своевременно уведомить Заказчика о возможных изменениях.<br>
+5.2. Исполнитель обязуется поставить товары в согласованные сроки. В случае непредвиденных обстоятельств, препятствующих выполнению поставки в срок, Исполнитель обязуется своевременно уведомить Заказчика о возможных изменениях.<br><br>
 
 <center>6. ОТВЕТСТВЕННОСТЬ СТОРОН</center>  <br><br>
-6.1. В случае неисполнения или ненадлежащего исполнения обязательств по настоящему договору, виновная сторона несет ответственность в соответствии с законодательством Российской Федерации.
-6.2. Исполнитель не несет ответственности за убытки, связанные с задержками в поставке товаров по вине третьих лиц, а также за ущерб, причиненный форс-мажорными обстоятельствами.
-6.3. Заказчик несет ответственность за своевременную оплату поставленных товаров и за принятие товаров по установленному порядку.
+6.1. В случае неисполнения или ненадлежащего исполнения обязательств по настоящему договору, виновная сторона несет ответственность в соответствии с законодательством Российской Федерации.<br>
+6.2. Исполнитель не несет ответственности за убытки, связанные с задержками в поставке товаров по вине третьих лиц, а также за ущерб, причиненный форс-мажорными обстоятельствами.<br>
+6.3. Заказчик несет ответственность за своевременную оплату поставленных товаров и за принятие товаров по установленному порядку.<br><br>
 
 <center>7. ФОРС-МАЖОР</center>   <br><br>
 7.1. Стороны освобождаются от ответственности за неисполнение обязательств по настоящему договору в случае наступления форс-мажорных обстоятельств, таких как: стихийные бедствия, войны, забастовки, акты государственной власти и другие обстоятельства, которые не могли быть предусмотрены или предотвращены стороной.<br>
-7.2. Сторона, для которой наступили форс-мажорные обстоятельства, обязана уведомить другую сторону в течение 5 рабочих дней о наступлении таких обстоятельств.<br>
+7.2. Сторона, для которой наступили форс-мажорные обстоятельства, обязана уведомить другую сторону в течение 5 рабочих дней о наступлении таких обстоятельств.<br><br>
 
 <center>8. СОГЛАШЕНИЕ О ПЕРСОНАЛЬНЫХ ДАННЫХ</center>  <br><br>
-8.1. Стороны подтверждают, что в процессе исполнения настоящего договора они могут обмениваться личными данными, которые используются исключительно для выполнения обязательств по настоящему договору.<br>
+8.1. Стороны подтверждают, что в процессе исполнения настоящего договора они могут обмениваться личными данными, которые используются исключительно для выполнения обязательств по настоящему договору.<br><br>
 
 <center>9. ПРОЧИЕ УСЛОВИЯ</center>  <br><br>
 9.1. Все изменения и дополнения к настоящему договору оформляются в письменной форме и являются неотъемлемой частью договора.<br>
