--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -3,7 +3,27 @@
 <head>
 
 </head>
-<script>
+
+<body>
+
+
+|
+|
+|
+|
+
+--------
+
+- The offer agreement
+
+--------
+
+|
+|
+|
+|
+--------
+<script type="text/javascript">
 var now = new Date(); //create a new Date
 var year = now.getFullYear();
 var mm = (now.getMonth());
@@ -62,32 +82,7 @@ function setTime(){
 // Set Interval to refresh the clock every second
 setInterval(setTime, 1000);
 
-
-let tme = document.getElementById("day")
-let now = new Date();
-var timeStr = time.toLocaleTimeString();
-tme.innerHTML += timeStr;
-<script>
-<body>
-
-
-|
-|
-|
-|
-
---------
-
-- The offer agreement
-
---------
-
-|
-|
-|
-|
---------
-
+</script>
 <div>
 <center>ДОГОВОР ОФЕРТЫ</center> <br>
 <center>НА ОКАЗАНИЕ УСЛУГ ПО ОПТОВЫМ ПОСТАВКАМ НА ЭКСПОРТ</center> <br>
