--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -87,11 +87,9 @@ setInterval(setTime, 1000);
 <center>ДОГОВОР ОФЕРТЫ</center> <br>
 <center>НА ОКАЗАНИЕ УСЛУГ ПО ОПТОВЫМ ПОСТАВКАМ НА ЭКСПОРТ</center> <br>
 
-Город Москва «<span class="day"></span>» <span class="month"></span> 2024 года  <br> <br>
+Город Москва «<div class="day"></div>» <div class="date"></div> года  <br> <br>
 
 	<div class="cal">
-		<div class="day"></div>
-		<div class="date"></div>
 		<div class="time"></div>
 	</div>
 
