--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -35,18 +35,18 @@ var sec = now.getSeconds();
 //Get month as a string
 function monthToStr(data){
   var month=new Array();
-  month[0]="January";
-  month[1]="February";
-  month[2]="March";
-  month[3]="April";
-  month[4]="May";
-  month[5]="June";
-  month[6]="July";
-  month[7]="August";
-  month[8]="September";
-  month[9]="October";
-  month[10]="November";
-  month[11]="December";
+  month[0]="Январь";
+  month[1]="Февраль";
+  month[2]="Март";
+  month[3]="Апрель";
+  month[4]="Май";
+  month[5]="Июнь";
+  month[6]="Июль";
+  month[7]="Август";
+  month[8]="Сентябрь";
+  month[9]="Октябрь";
+  month[10]="Ноябрь";
+  month[11]="Декабрь";
   return month[data];
 }
 
