--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -75,7 +75,7 @@ function setTime(){
 	
 // Get Date
 	$('.day').html('«'+ dayToStr(dd)+'»');
-	$('.date').html(dd + " " + monthToStr(mm) + " " + year);
+	$('.date').html('«'+dd+'»' + " " + monthToStr(mm) + " " + year);
 	$('.time').html(hour + ":" + min + ":" + sec);
 };
 
