--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -87,7 +87,7 @@ setInterval(setTime, 1000);
 <center>ДОГОВОР ОФЕРТЫ</center> <br>
 <center>НА ОКАЗАНИЕ УСЛУГ ПО ОПТОВЫМ ПОСТАВКАМ НА ЭКСПОРТ</center> <br>
 
-Город Москва «<span class="day"></span>» <span class="date"></span> года  <br> <br>
+Город Москва <span class="day"></span> <span class="date"></span> года  <br> <br>
 
 	<div class="cal">
 		<div class="time"></div>
