--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -6,18 +6,13 @@
 
 <body style="font-family: monospace;">
 
-
 |
 |
 |
 |
-
 --------
-
 - The offer agreement
-
 --------
-
 |
 |
 |
@@ -94,7 +89,8 @@ setInterval(setTime, 1000);
 	</div>
 
 <center>1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ</center> <br><br>
-1.1. В настоящем Договоре следующие термины имеют следующие значения: <br>
+
+&#32; &#32; &#32; 1.1. В настоящем Договоре следующие термины имеют следующие значения: <br>
 
 Оферта — предложение одной стороны (Исполнителя) другой стороне (Заказчику) заключить договор на условиях, изложенных в настоящем документе. <br>
 Заказчик — юридическое лицо или индивидуальный предприниматель, которому предлагаются услуги по оптовым поставкам товаров. <br>
@@ -102,11 +98,13 @@ setInterval(setTime, 1000);
 Услуга — деятельность Исполнителя по поставке товаров, указанных в п. 1.2. настоящего Договора, в соответствии с условиями, изложенными в Оферте. <br>
 Товары — зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары, поставка которых может быть осуществлена в рамках данного договора.  <br><br>
 <center>2. ПРЕДМЕТ ДОГОВОРА</center> <br><br>
-2.1. Исполнитель обязуется оказать услуги по оптовым поставкам товаров Заказчику, а Заказчик обязуется оплатить эти услуги в соответствии с условиями настоящего договора. <br>
+&#32; &#32; &#32;2.1. Исполнитель обязуется оказать услуги по оптовым поставкам товаров Заказчику, а Заказчик обязуется оплатить эти услуги в соответствии с условиями настоящего договора. <br>
 2.2. Поставки товаров могут включать зерно, топливо, руды, металлы, химические вещества, сельскохозяйственное сырье, лесоматериалы, машины, текстильные изделия, пищевые продукты и другие товары по согласованию сторон.<br>
 2.3. Услуги предоставляются на условиях поставки "CIF" (по Международным правилам Инкотермс 2020) или других, оговоренных в договоре условиях, по предварительному соглашению сторон.<br>
 <br><br>
+
 <center>3. ПРАВА И ОБЯЗАННОСТИ СТОРОН</center> <br><br>
+
 3.1. Обязанности Исполнителя:<br>
 
 3.1.1. Осуществлять поставки товаров в сроки и в соответствии с условиями настоящего договора.<br>
@@ -116,39 +114,47 @@ setInterval(setTime, 1000);
 3.2.1. Оплатить стоимость услуг по поставке товаров в сроки и на условиях, предусмотренных договором.<br>
 3.2.2. Принять товары в месте и в сроки, указанные в условиях договора.<br>
 3.2.3. Обеспечить необходимое сотрудничество с Исполнителем для выполнения условий договора.<br><br>
+
 <center>4. СТОИМОСТЬ УСЛУГ И ПОРЯДОК ОПЛАТЫ</center> <br><br>
+
 4.1. Стоимость услуг по оптовым поставкам товаров определяется на основании цен, согласованных сторонами в отдельном заказе или контракте.<br>
 4.2. Оплата услуг осуществляется Заказчиком на условиях 100% предоплаты или по графику, согласованному сторонами.<br>
 4.3. Все платежи по данному договору осуществляются в рублях Российской Федерации на счет Исполнителя, указанный в счетах или инвойсах.<br><br>
 
 <center>5. СРОКИ И УСЛОВИЯ ПОСТАВОК</center> <br><br>
+
 5.1. Сроки поставки товаров определяются в каждом случае индивидуально и согласовываются сторонами в заказах или контрактах.<br>
 5.2. Исполнитель обязуется поставить товары в согласованные сроки. В случае непредвиденных обстоятельств, препятствующих выполнению поставки в срок, Исполнитель обязуется своевременно уведомить Заказчика о возможных изменениях.<br><br>
 
 <center>6. ОТВЕТСТВЕННОСТЬ СТОРОН</center>  <br><br>
+
 6.1. В случае неисполнения или ненадлежащего исполнения обязательств по настоящему договору, виновная сторона несет ответственность в соответствии с законодательством Российской Федерации.<br>
 6.2. Исполнитель не несет ответственности за убытки, связанные с задержками в поставке товаров по вине третьих лиц, а также за ущерб, причиненный форс-мажорными обстоятельствами.<br>
 6.3. Заказчик несет ответственность за своевременную оплату поставленных товаров и за принятие товаров по установленному порядку.<br><br>
 
 <center>7. ФОРС-МАЖОР</center>   <br><br>
+
 7.1. Стороны освобождаются от ответственности за неисполнение обязательств по настоящему договору в случае наступления форс-мажорных обстоятельств, таких как: стихийные бедствия, войны, забастовки, акты государственной власти и другие обстоятельства, которые не могли быть предусмотрены или предотвращены стороной.<br>
 7.2. Сторона, для которой наступили форс-мажорные обстоятельства, обязана уведомить другую сторону в течение 5 рабочих дней о наступлении таких обстоятельств.<br><br>
 
 <center>8. СОГЛАШЕНИЕ О ПЕРСОНАЛЬНЫХ ДАННЫХ</center>  <br><br>
+
 8.1. Стороны подтверждают, что в процессе исполнения настоящего договора они могут обмениваться личными данными, которые используются исключительно для выполнения обязательств по настоящему договору.<br><br>
 
 <center>9. ПРОЧИЕ УСЛОВИЯ</center>  <br><br>
+
 9.1. Все изменения и дополнения к настоящему договору оформляются в письменной форме и являются неотъемлемой частью договора.<br>
 9.2. В случае возникновения споров, стороны будут стремиться к их разрешению путем переговоров. В случае невозможности решения спора путем переговоров, спор передается на рассмотрение в арбитражный суд по месту нахождения Исполнителя.<br>
 
 <center>10. ПРИЛОЖЕНИЯ</center>  <br><br>
+
 10.1. Приложения к настоящему договору являются его неотъемлемой частью.<br>
 
 <center>11. ПОДПИСАНИЕ СТОРОН</center>  <br><br>
+
 11.1. Подписанием данного договора одна сторона делает предложение, а другая сторона принимает его в установленном порядке, что влечет за собой заключение договора.<br>
 
 </div>
-
 <script src="https://w.tb.ru/open-messenger/widget?wId=W-B559B447E6804AC5A67B41C4D5389C1B"></script>
 </body>
 
