--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -85,7 +85,7 @@ setInterval(setTime, 1000);
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Город Москва <span class="day"></span> <span class="date"></span> года  <br> <br>
 
 	<div class="cal">
-		<div class="time"></div>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="time"></div>
 	</div>
 
 <center>1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ</center> <br><br>
