--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -2,7 +2,7 @@
  <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
  </head>
-<body style="font-family: monospace;">
+<body style="font-family: monospace;font-size: 3em;font-weight: 900;">
 <!--
 |
 |
