--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -80,11 +80,13 @@ setInterval(setTime, 1000);
 <center>ДОГОВОР ОФЕРТЫ</center> <br>
 <center>НА ОКАЗАНИЕ УСЛУГ ПО ОПТОВЫМ ПОСТАВКАМ НА ЭКСПОРТ</center> <br>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Город Москва <span class="day"></span> <span class="date"></span> года  <br> <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Город Москва <span class="day"></span> <span class="date"></span> года  <br> <br>
 
 	<div class="cal">
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="time"></div>
-	</div>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="time"></div>
+	
+        </div>
 
 <center>1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ</center> <br><br>
 
