--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -28,18 +28,18 @@ var sec = now.getSeconds();
 //Get month as a string
 function monthToStr(data){
   var month=new Array();
-  month[0]="Январь";
-  month[1]="Февраль";
-  month[2]="Март";
-  month[3]="Апрель";
-  month[4]="Май";
-  month[5]="Июнь";
-  month[6]="Июль";
-  month[7]="Август";
-  month[8]="Сентябрь";
-  month[9]="Октябрь";
-  month[10]="Ноябрь";
-  month[11]="Декабрь";
+  month[0]="Января";
+  month[1]="Февраля";
+  month[2]="Марта";
+  month[3]="Апреля";
+  month[4]="Мая";
+  month[5]="Июня";
+  month[6]="Июля";
+  month[7]="Августа";
+  month[8]="Сентября";
+  month[9]="Октября";
+  month[10]="Ноября";
+  month[11]="Декабря";
   return month[data];
 }
 
