--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -69,7 +69,7 @@ function setTime(){
 // Get Date
 // $('.day').html('«'+ dayToStr(dd)+'»');
 	$('.date').html('«'+dd+'»' + " " + monthToStr(mm) + " " + year);
-	$('.time').html(hour + ":" + min + ":" + sec);
+	$('.time').html(hour + ":" + min);
 };
 
 // Set Interval to refresh the clock every second
@@ -82,11 +82,11 @@ setInterval(setTime, 1000);
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Город Москва <span class="day"></span> <span class="date"></span> года  <br> <br>
 
-	<div class="cal">
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div class="time"></div>
 	
-        </div>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="time"></span>
+	
+
 
 <center>1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ</center> <br><br>
 
