--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -81,13 +81,8 @@ setInterval(setTime, 1000);
 <center>НА ОКАЗАНИЕ УСЛУГ ПО ОПТОВЫМ ПОСТАВКАМ НА ЭКСПОРТ</center> <br>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Город Москва <span class="day"></span> <span class="date"></span> года  <br> <br>
-
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="time" style="position: absolute;top: 5px;left: 5px;"></span>
 	
-
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="time"></span>
-	
-
-
 <center>1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ</center> <br><br>
 
 &nbsp;&nbsp;&nbsp; 1.1. В настоящем Договоре следующие термины имеют следующие значения: <br>
