--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -3,19 +3,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 <body style="font-family: monospace;font-size: 3em;font-weight: 900;">
-<!--
-|
-|
-|
-|
---------
-- The offer agreement
---------
-|
-|
-|
-|
--------->
+
 <script type="text/javascript">
 var now = new Date(); //create a new Date
 var year = now.getFullYear();
@@ -80,8 +68,11 @@ setInterval(setTime, 1000);
 <center>ДОГОВОР ОФЕРТЫ</center> <br>
 <center>НА ОКАЗАНИЕ УСЛУГ ПО ОПТОВЫМ ПОСТАВКАМ НА ЭКСПОРТ</center> <br>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Город Москва <span class="day"></span> <span class="date"></span> года  <br> <br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="time" style="position: absolute;top: 5px;left: 5px;"></span>
+<!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
+
+ Город Москва <span class="day"></span> <span class="date" style="position: absolute;top: 5px;left: 5px;
+"></span> года  <br> <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="time" style="position: absolute;top: 5px;right: 5px;"></span>
 	
 <center>1. ОПРЕДЕЛЕНИЕ ТЕРМИНОВ</center> <br><br>
 
