--- a/the_offer_agreement.html
+++ b/the_offer_agreement.html
@@ -1,8 +1,13 @@
 <html>
  <head>
    <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body{font-family: monospace;font-size: 3em;font-weight: 900;
+background-color: black;color:white;font-family: monospace;}
+::-webkit-scrollbar{width: 0px;}
+</style>
   </head>
-<body style="font-family: monospace;font-size: 3em;font-weight: 900;">
+<body style="">
 
 <script type="text/javascript">
 var now = new Date(); //create a new Date
