--- a/eCEDI/index.html
+++ b/eCEDI/index.html
@@ -7,11 +7,9 @@
   <script src="https://cdn.jsdelivr.net/npm/web3@1.6.0/dist/web3.min.js"></script>
   <style>
     body {
-      display: flex;
-      justify-content: center;
+      display: flex;justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
+      height: 100vh;margin: 0;
       background-color: #f0f0f0;
     }
 
@@ -27,21 +25,17 @@
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
       position: relative;
     }
-
     .chip {
-      width: 50px;
-      height: 40px;
+      width: 50px;height: 40px;
       background: gold;
       border-radius: 5px;
     }
-
     .bank-name {
       font-family: Arial, sans-serif;
       font-size: 24px;
       font-weight: bold;
       color: #fff;
     }
-
     .number {
     font-family: "Courier New", monospace;
     font-family: 'cc font', monospace;
@@ -53,7 +47,6 @@
     color: #fff;
     text-shadow: 0px 0px 1px #a4a4a4, 0px 0px 1px #9e9e9e, 0px 0px 1px #fbfbfb, 0px 0px 1px #ffffff;
     }
-
     .expiry {
       font-family: Arial, sans-serif;
       font-family: 'cc font', monospace;
@@ -62,7 +55,6 @@
       color: #fff;
       text-shadow: 0px 0px 1px #a4a4a4, 0px 0px 1px #9e9e9e, 0px 0px 1px #fbfbfb, 0px 0px 1px #ffffff;    
     }
-
     .cardholder {
       font-family: Arial, sans-serif;
       font-family: 'cc font', monospace;
@@ -71,7 +63,6 @@
       color: #fff;
       text-shadow: 0px 0px 2px #a4a4a4, 0px 0px 1px #9e9e9e, 0px 0px 1px #fbfbfb, 0px 0px 1px #ffffff;
     }
-
     .hologram {
     position: absolute;
     bottom: 15px;
@@ -84,7 +75,6 @@
     background-size: contain;
     background-repeat: no-repeat;
     }
-    /* HTML: <div class="star"></div> */
 .star {
     width: 90px;
     aspect-ratio: 1;
