--- a/eCEDI/index.html
+++ b/eCEDI/index.html
@@ -8,8 +8,7 @@
   <style>
     body {
       display: flex;justify-content: center;
-      align-items: center;
-      height: 100vh;margin: 0;
+      align-items: center;height: 100vh;margin: 0;
       background-color: #f0f0f0;
     }
     .card {
