--- a/travel/index.html
+++ b/travel/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Анкета</title>
+    <title>Райские острова от США до Австралии и Новой Зеландии</title>
     <link href="https://rosagro-tech.github.io/fonts/eth2/stylesheet.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Megrim&amp;display=swap" rel="stylesheet">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
@@ -17,7 +17,7 @@ margin: 1px;
       }
      </style>
 	  <!-- Chatra {literal} -->
-<!--
+
 <script>
     (function(d, w, c) {
         w.ChatraID = 'C2t8Mb2LPj9d8drFL';
@@ -30,7 +30,7 @@ margin: 1px;
         if (d.head) d.head.appendChild(s);
     })(document, window, 'Chatra');
 </script>
--->
+
 <!-- /Chatra {/literal} -->
     </head>
   <body style="margin:0;">
@@ -39,8 +39,7 @@ margin: 1px;
        text-align: center;
        FONT-SIZE: 4.5EM;
        position: relative;
-       top: 5px;">
-20 островов от США до Австралии и Новой Зеландии
+       top: 5px;">Райские острова от США до Австралии и Новой Зеландии
 	   </h3>
 	   <center>
         <div class="columns is-mobile">
