--- a/yaMap.html
+++ b/yaMap.html
@@ -25,7 +25,8 @@
                 center: [61.5240, 105.3180], // Центральная точка карты (Россия)
                 zoom: 4
             });
-
+            // Применяем тёмную тему
+            map.setStyle('dark');
             // Добавление меток
             var placemarks = [
                 {coords: [66.750833, 80.498889], name: "Русское"},
