--- a/yaMap.html
+++ b/yaMap.html
@@ -83,7 +83,7 @@
                 center: [61.5240, 105.3180], // Центральная точка карты (Россия)
                 zoom: 4
             });
-
+             map.setStyle('dark');
             // Добавление меток
             var placemarks = [
                 {coords: [66.750833, 80.498889], name: "Русское"},
