--- a/$/expImp.html
+++ b/$/expImp.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-<h1 style="position: absolute;font-family: monospace;left: 26%;font-size: 7em;">{EXPORT}/{IMPORT}</h1>
+<h1 style="top:30%; position: absolute;font-family: monospace;left: 26%;font-size: 7em;">{EXPORT}/{IMPORT}</h1>
 
     <iframe src="map.html" style="border: 0;width: 100%;height: 100vh;position: absolute;z-index: -1;opacity:.9;"></iframe>
 
