--- a/travel/100.html
+++ b/travel/100.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Райские острова от США до Австралии и Новой Зеландии</title>
     <link href="https://rosagro-tech.github.io/fonts/eth2/stylesheet.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Megrim&amp;display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
-      <style>::-webkit-scrollbar{width:0px;}img{width:100%;margin:-3px;}
+   <link href="https://fonts.googleapis.com/css2?family=Megrim&amp;display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+      <style>::-webkit-scrollbar{width:0px;}img{width:100%;margin:-3px;}body{font-family: "Caveat", serif;font-optical-sizing: auto;font-weight: 700;}
       .column {
 background-color: chocolate;
 margin: 1px;
