--- a/travel/100.html
+++ b/travel/100.html
@@ -10,7 +10,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
-      <style>::-webkit-scrollbar{width:0px;}img{width:100%;margin:-3px;}body{font-family: "Caveat", serif;font-optical-sizing: auto;font-weight: 700;}
+      <style>::-webkit-scrollbar{width:0px;}img{width:100%;margin:-3px;}body{font-family: "Caveat", serif;font-optical-sizing: auto;font-weight: 700;background-color: #ebb247;}
       .column {
 background-color: chocolate;
 margin: 1px;
