--- a/travel/100.html
+++ b/travel/100.html
@@ -10,7 +10,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
-      <style>::-webkit-scrollbar{width:0px;}img{width:100%;margin:-3px;}body{font-family: "Caveat", serif;font-optical-sizing: auto;font-weight: 700;background-color: #ebb247;}
+      <style>::-webkit-scrollbar{width:0px;}img{width:100%;margin:-3px;}body{font-family: "Caveat", serif;font-optical-sizing: auto;font-weight: 700;background-color: #ffa60052;}
       .column {
 background-color: chocolate;
 margin: 1px;
@@ -25,7 +25,7 @@ margin: 1px;
           <!-- /Chatra {/literal} -->
     </head>
   <body style="margin:0;">
-	   <h3 style="    background-color: #ebb247;
+	   <h3 style="
        color: white;
        text-align: center;
        FONT-SIZE: 4.5EM;
@@ -34,10 +34,10 @@ margin: 1px;
 	   </h3>
 	   <center>
 
-          <h3 style="background-color: #ebb247;color: white;text-align: center;FONT-SIZE: 2.5EM;position: relative;top: 8px;">
+          <h3 style="color: white;text-align: center;FONT-SIZE: 2.5EM;position: relative;top: 8px;">
       Около 100 стран и все острова. Jamaica, Maldives и так далее
                    </h3>
-         <h3 style="background-color: #ebb247;color: white;text-align: center;FONT-SIZE: 2.5EM;position: relative;top: 8px;padding: 10px;">
+         <h3 style="color: white;text-align: center;FONT-SIZE: 2.5EM;position: relative;top: 8px;padding: 10px;">
        Нажмите тут, чтобы скинуть попку, титьки, вареник и оставить заявку
                    </h3>
 
