--- a/travel/100.html
+++ b/travel/100.html
@@ -10,7 +10,10 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
-      <style>html{background-image:url(https://www.delta.com/content/dam/delta-www/responsive/destinations/airport/PLS.jpg);}::-webkit-scrollbar{width:0px;}img{width:100%;margin:-3px;}body{font-family: "Caveat", serif;font-optical-sizing: auto;font-weight: 700;background-color: #ffa60052;}
+      <style>html{background-image:url(https://www.delta.com/content/dam/delta-www/responsive/destinations/airport/PLS.jpg);}
+       ::-webkit-scrollbar{width:0px;}
+       img{width:100%;margin:-3px;}
+       body{font-family: "Caveat", serif;font-optical-sizing: auto;font-weight: 700;background-color: #ffa60052;}
       .column {
 background-color: chocolate;
 margin: 1px;
