--- a/travel/100.html
+++ b/travel/100.html
@@ -13,7 +13,7 @@
       <style>html{background-image:url(https://www.delta.com/content/dam/delta-www/responsive/destinations/airport/PLS.jpg);}
        ::-webkit-scrollbar{width:0px;}
        img{width:100%;margin:-3px;}
-       body{font-family: "Caveat", serif;font-optical-sizing: auto;font-weight: 700;background-color: #ffa60052;}
+       body{font-family: "Caveat", serif;font-optical-sizing: auto;font-weight: 700;background-color: #ffa60052;background: linear-gradient(105deg, #fd811291, #0085cac2);height:100vh;}
       .column {
 background-color: chocolate;
 margin: 1px;
@@ -28,12 +28,10 @@ margin: 1px;
           <!-- /Chatra {/literal} -->
     </head>
   <body style="margin:0;">
-	   <h3 style="
-       color: white;
-       text-align: center;
-       FONT-SIZE: 4.5EM;
-       position: relative;
-       top: 5px;">Райские острова от США до Австралии и Новой Зеландии
+	   <h3 style="color: white;text-align: center;FONT-SIZE: 4.5EM;
+       position: relative;top: 5px;">Райские острова от США до Австралии и Новой Зеландии
+<br>
+  Около 100 стран и все острова. Jamaica, Maldives и так далее
 	   </h3>
 	   <center>
 
