--- a/travel/100.html
+++ b/travel/100.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">	
-  <head>
+<html lang="ru"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Райские острова от США до Австралии и Новой Зеландии</title>
@@ -8,40 +6,27 @@
    <link href="https://fonts.googleapis.com/css2?family=Megrim&amp;display=swap" rel="stylesheet">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&amp;display=swap" rel="stylesheet">
       <style>html{background-image:url(https://www.delta.com/content/dam/delta-www/responsive/destinations/airport/PLS.jpg);background-size: cover;}
        ::-webkit-scrollbar{width:0px;}
        img{width:100%;margin:-3px;}
        body{font-family: "Caveat", serif;font-optical-sizing: auto;font-weight: 700;background-color: #ffa60052;background: linear-gradient(105deg, #fd811291, #0085cac2);height:100vh;}
       .column {
-background-color: chocolate;
-margin: 1px;
-    font-size: 3em;
-    color: white;position: relative;
-    top: 18px;
-      }
+     background-color: chocolate;margin: 1px;font-size: 3em;color: white;position: relative;top: 18px;
+       }
      </style>
-	  <!-- Chatra {literal} -->
-
-
-          <!-- /Chatra {/literal} -->
     </head>
-  <body style="margin:0;">
-	   <h3 style="color: white;text-align: center;FONT-SIZE: 4.5EM;
-       position: relative;top: 5px;">Райские острова от США до Австралии и Новой Зеландии
-<br>
-  Около 100 стран и все острова. Jamaica, Maldives и так далее
+  <body style="margin:0;/* margin: 61px; */">
+    <h3 style="color: white;text-align: center;FONT-SIZE: 7EM;position: relative;top: 50px;">
+        Райские острова от США до Австралии и Новой Зеландии
+      <br>
+        Около 100 стран и все острова. Jamaica, Maldives и так далее
 	   </h3>
-	   <center>
-
-          <h3 style="color: white;text-align: center;FONT-SIZE: 2.5EM;position: relative;top: 8px;">
-      Около 100 стран и все острова. Jamaica, Maldives и так далее
-                   </h3>
-         <h3 style="color: white;text-align: center;FONT-SIZE: 2.5EM;position: relative;top: 8px;padding: 10px;">
-       Нажмите тут, чтобы скинуть попку, титьки, вареник и оставить заявку
-                   </h3>
-
-	   </center>
-  </body>
+	     <center>
+            <h3 style="color: white;text-align: center;FONT-SIZE: 4EM;position: relative;top: 8px;"></h3>
+         <h3 style="color: white;text-align: center;FONT-SIZE: 4EM;position: relative;top: 8px;padding: 10px;">
+        </h3>
+      </center>
+   </body>
 </html>
