--- a/camera/opv.html
+++ b/camera/opv.html
@@ -44,7 +44,7 @@
     </div>
     <div id="result"></div>
 
-    <script async src="https://docs.opencv.org/master/opencv.js" type="text/javascript"></script>
+    <script async src="opencv.js" type="text/javascript"></script>
     <script>
         // Инициализация элементов
         const video = document.getElementById('video');
