--- a/camera/opv2.html
+++ b/camera/opv2.html
@@ -50,7 +50,7 @@
     <div id="result"></div>
 
     <!-- Используйте локальный файл opencv.js -->
-    <script async src="https://cdn.jsdelivr.net/npm/opencv@7.0.0/lib/opencv.min.js" type="text/javascript"></script>
+    <script async src="js/opencv.js" type="text/javascript"></script>
     <script>
         function onOpenCVReady() {
             console.log("OpenCV успешно загружен!");
