--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -167,6 +166,10 @@
     <div class="container">
         <!-- Заголовок -->
         <h1>Егор Румянцев</h1>
+        <!-- Фотография под именем -->
+        <div style="display:flex; justify-content:center; margin-bottom:1.5em;">
+            <img src="5397632366530393540.jpg" alt="Фото Егора Румянцева" style="width:160px; height:160px; object-fit:cover; border-radius:50%; box-shadow:0 4px 24px rgba(0,0,0,0.18); border:4px solid #31314a;">
+        </div>
         <div style="font-size:1.2rem; color:#ffb347; margin-bottom:2em;">Портфолио — Резюме</div>
         <!-- Проекты -->
         <h2>Проекты</h2>
@@ -231,7 +234,7 @@
         <!-- Образование -->
         <div class="education">
             <h2>Образование</h2>
-            <div><b>МИФИ</b> — Кафедра Экспериментальной ФИЗИКИ</div>
+            <div><b>МИФИ</b> — Кафедра проблем экспериментальной физики (№59)</div>
             <div>Специальность: "Приборы и методы экспериментальной физики"</div>
             <!-- Слайдер для образования -->
             <div class="slider">
