--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -209,10 +209,10 @@
                 <!-- Слайдер для Арктики -->
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
-                    <img class="slider-img" src="https://placehold.co/400x220/31314a/ffb347?text=Арктика+1" alt="Арктика 1">
+                    <img class="slider-img" src="https://placehold.co/400x220/31314a/ffb347?text=Совместный+проект+с+RUSAK" alt="Арктика 1">
+                    <div class="slider-caption">Совместный проект с RUSAK «Русская Автомобильная Компания»</div>
+                    <img class="slider-img" src="https://placehold.co/400x220/232526/ffb347?text=Совместный+проект+с+МФТИ"" alt="Арктика 2">
                     <div class="slider-caption">Совместный проект с МФТИ</div>
-                    <img class="slider-img" src="https://placehold.co/400x220/232526/ffb347?text=Арктика+2" alt="Арктика 2">
-                    <div class="slider-caption">Презентация для НИИ, 2021</div>
                     <button class="slider-btn right">&#8594;</button>
                 </div>
             </div>
