--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -181,9 +181,21 @@
                 <!-- Слайдер для Сочи -->
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
-                    <img class="slider-img" src="5397632366530393540.jpg" alt="Сочи 1">
-                    <div class="slider-caption">Мастер-класс в Сириусе, 2023</div>
-                    <img class="slider-img" src="https://placehold.co/400x220/232526/ffb347?text=Сочи+2" alt="Сочи 2">
+                    <img class="slider-img" src="sirius5.jpg?text=Мастер-классы в Сириусе" alt="Сочи 1">
+                    <div class="slider-caption">Мастер-классы в Сириусе</div>
+                    <img class="slider-img" src="sirius1.jpg?text=Мастер-классы в Сириусе" alt="Сочи 2">
+                    <div class="slider-caption">Интерактивное занятие для школьников</div>
+                    <img class="slider-img" src="sirius2.jpg?text=Мастер-классы в Сириусе" alt="Сочи 3">
+                    <div class="slider-caption">Интерактивное занятие для школьников</div>
+                    <img class="slider-img" src="sirius3.jpg?text=Мастер-классы в Сириусе" alt="Сочи 4">
+                    <div class="slider-caption">Интерактивное занятие для школьников</div>
+                    <img class="slider-img" src="sirius4.jpg?text=Мастер-классы в Сириусе" alt="Сочи 5">
+                    <div class="slider-caption">Интерактивное занятие для школьников</div>
+                    <img class="slider-img" src="sirius5.jpg?text=Мастер-классы в Сириусе" alt="Сочи 6">
+                    <div class="slider-caption">Интерактивное занятие для школьников</div>
+                    <img class="slider-img" src="sirius6.jpg?text=Мастер-классы в Сириусе" alt="Сочи 7">
+                    <div class="slider-caption">Интерактивное занятие для школьников</div>
+                    <img class="slider-img" src="sirius7.jpg?text=Мастер-классы в Сириусе" alt="Сочи 8">
                     <div class="slider-caption">Интерактивное занятие для школьников</div>
                     <button class="slider-btn right">&#8594;</button>
                 </div>
