--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -207,7 +207,7 @@
                 <!-- Слайдер для Москвы -->
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
-                    <img class="slider-img" src="https://placehold.co/400x220/31314a/ffb347?text=Москва+1" alt="Москва 1">
+                    <img class="slider-img" src="msk1.jpg?text=Москва+1" alt="Москва 1">
                     <div class="slider-caption">Презентация ATOMIC HEART, 2022</div>
                     <img class="slider-img" src="https://placehold.co/400x220/232526/ffb347?text=Москва+2" alt="Москва 2">
                     <div class="slider-caption">Мастер-класс для студентов МГУ</div>
