--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -191,11 +191,11 @@
                     <div class="slider-caption">Интерактивное занятие для школьников</div>
                     <img class="slider-img" src="sirius4.jpg?text=Мастер-классы в Сириусе" alt="Сочи 5">
                     <div class="slider-caption">Интерактивное занятие для школьников</div>
-                    <img class="slider-img" src="sirius5.jpg?text=Мастер-классы в Сириусе" alt="Сочи 6">
+                    <img class="slider-img" src="sirius6.jpg?text=Мастер-классы в Сириусе" alt="Сочи 6">
                     <div class="slider-caption">Интерактивное занятие для школьников</div>
-                    <img class="slider-img" src="sirius6.jpg?text=Мастер-классы в Сириусе" alt="Сочи 7">
+                    <img class="slider-img" src="sirius7.jpg?text=Мастер-классы в Сириусе" alt="Сочи 7">
                     <div class="slider-caption">Интерактивное занятие для школьников</div>
-                    <img class="slider-img" src="sirius7.jpg?text=Мастер-классы в Сириусе" alt="Сочи 8">
+                    <img class="slider-img" src="sirius8.jpg?text=Мастер-классы в Сириусе" alt="Сочи 8">
                     <div class="slider-caption">Интерактивное занятие для школьников</div>
                     <button class="slider-btn right">&#8594;</button>
                 </div>
@@ -207,8 +207,8 @@
                 <!-- Слайдер для Москвы -->
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
-                    <img class="slider-img" src="msk1.jpg?text=Москва+1" alt="Москва 1">
-                    <div class="slider-caption">Презентация ATOMIC HEART, 2022</div>
+                    <img class="slider-img" src="msk1.jpg?text=Начальная стадия разработки" alt="Москва 1">
+                    <div class="slider-caption">Начальная стадия разработки ATOMIC HEART</div>
                     <img class="slider-img" src="https://placehold.co/400x220/232526/ffb347?text=Москва+2" alt="Москва 2">
                     <div class="slider-caption">Мастер-класс для студентов МГУ</div>
                     <button class="slider-btn right">&#8594;</button>
