--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -235,10 +235,12 @@
                 <!-- Слайдер для Африки -->
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
-                    <img class="slider-img" src="https://placehold.co/400x220/31314a/ffb347?text=Африка+1" alt="Африка 1">
-                    <div class="slider-caption">Образовательная инициатива, 2023</div>
-                    <img class="slider-img" src="https://placehold.co/400x220/232526/ffb347?text=Африка+2" alt="Африка 2">
-                    <div class="slider-caption">Международный проект, 2022</div>
+                    <img class="slider-img" src="af2.jpg?text=Совместный проект в сфере энергетики" alt="Африка 1">
+                    <div class="slider-caption">Совместный проект в сфере энергетики, 2024</div>
+                    <img class="slider-img" src="af3.jpg?text=Совместный проект в сфере энергетики" alt="Африка 2">
+                    <div class="slider-caption">Проект</div>
+                    <img class="slider-img" src="af4.jpg?text=Совместный проект в сфере энергетики" alt="Африка 2">
+                    <div class="slider-caption">Проект</div>
                     <button class="slider-btn right">&#8594;</button>
                 </div>
             </div>
