--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -253,14 +253,14 @@
             <!-- Слайдер для образования -->
             <div class="slider">
                 <button class="slider-btn left">&#8592;</button>
-                <img class="slider-img" src="mephi1.jpg" alt="МИФИ 1">
-                <div class="slider-caption">НИЯУ МИФИ — Научная работа, 2018</div>
-                <img class="slider-img" src="mephi2.jpg" alt="МИФИ 2">
-                <div class="slider-caption">Лабораторные исследования, 2019</div>
-                <img class="slider-img" src="mephi3.jpg" alt="МИФИ 3">
-                <div class="slider-caption">Экспериментальная установка, 2020</div>
-                <img class="slider-img" src="mephi4.jpg" alt="МИФИ 4">
-                <div class="slider-caption">Дипломная защита, 2021</div>
+                <img class="slider-img" src="mephi1.jpg?text=НИЯУ+МИФИ" alt="МИФИ 1">
+                <div class="slider-caption">НИЯУ МИФИ — Научная работа в сфере «Эксперементальной физики»</div>
+                <img class="slider-img" src="mephi2.jpg?text=НИЯУ+МИФИ" alt="МИФИ 2">
+                <div class="slider-caption">НИЯУ МИФИ — Научная работа в сфере «Эксперементальной физики»</div>
+                <img class="slider-img" src="mephi3.jpg?text=НИЯУ+МИФИ" alt="МИФИ 3">
+                <div class="slider-caption">НИЯУ МИФИ — Научная работа в сфере «Эксперементальной физики»</div>
+                <img class="slider-img" src="mephi4.jpg?text=НИЯУ+МИФИ" alt="МИФИ 4">
+                <div class="slider-caption">НИЯУ МИФИ — Научная работа в сфере «Эксперементальной физики»</div>
                 <button class="slider-btn right">&#8594;</button>
             </div>
         </div>
