--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -176,8 +176,8 @@
         <div class="projects">
             <!-- Проект 1 -->
             <div class="project">
-                <div class="project-title">СОЧИ — "Сириус" Мастер Классы</div>
-                <div class="project-desc">Организация и проведение мастер-классов в Сочи. Современные образовательные форматы и интерактивные мероприятия.</div>
+                <div class="project-title">СОЧИ — «Сириус» Мастер Классы</div>
+                <div class="project-desc">Организация и проведение мастер-классов в Сочи и на Дальнем Востоке. Современные образовательные форматы и интерактивные мероприятия.</div>
                 <!-- Слайдер для Сочи -->
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
@@ -202,7 +202,7 @@
             </div>
             <!-- Проект 2 -->
             <div class="project">
-                <div class="project-title">МОСКВА — проект ATOMIC HEART</div>
+                <div class="project-title">МОСКВА — проект «ATOMIC HEART»</div>
                 <div class="project-desc">Презентации на высшем уровне государства, крупные проекты и мастер-классы в Москве, участие в проекте ATOMIC HEART.</div>
                 <!-- Слайдер для Москвы -->
                 <div class="slider">
@@ -221,8 +221,8 @@
                 <!-- Слайдер для Арктики -->
                 <div class="slider">
                     <button class="slider-btn left">&#8592;</button>
-                    <img class="slider-img" src="https://placehold.co/400x220/31314a/ffb347?text=Совместный+проект+с+RUSAK" alt="Арктика 1">
-                    <div class="slider-caption">Совместный проект с RUSAK «Русская Автомобильная Компания»</div>
+                    <img class="slider-img" src="arctic1.jpg?text=Совместный+проект+с+МФТИ+и+РУСАК" alt="Арктика 1">
+                    <div class="slider-caption">Совместный проект с МФТИ  («Московский физико-технический институт» (национальный исследовательский университет)) и RUSAK «Русская Автомобильная Компания»</div>
                     <img class="slider-img" src="https://placehold.co/400x220/232526/ffb347?text=Совместный+проект+с+МФТИ"" alt="Арктика 2">
                     <div class="slider-caption">Совместный проект с МФТИ</div>
                     <button class="slider-btn right">&#8594;</button>
