--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфолио — Егор Румянцев</title>
+    <title>Портфолио — Румянцев</title>
     <!-- Современные стили, вдохновлённые Dribbble и Behance -->
     <style>
         /* Основные стили страницы */
@@ -165,7 +165,7 @@
 <body>
     <div class="container">
         <!-- Заголовок -->
-        <h1>Егор Румянцев</h1>
+        <h1>Румянцев Георгий Теттевич</h1>
         <!-- Фотография под именем -->
         <div style="display:flex; justify-content:center; margin-bottom:1.5em;">
             <img src="5397632366530393540.jpg" alt="Фото Егора Румянцева" style="width:160px; height:160px; object-fit:cover; border-radius:50%; box-shadow:0 4px 24px rgba(0,0,0,0.18); border:4px solid #31314a;">
